# cargo-isobin

./: .gitignore  Cargo.toml  LICENSE  cSpell.json
examples/cargo_toml1/: isobin.toml
examples/cargo_version_error1/: isobin.toml
scripts/git/hooks/pre-push/: cargo_test.sh
src/: bin_map.rs  clear.rs  clearn.rs  config.rs  directories.rs  errors.rs  init.rs  install.rs  installer.rs  lib.rs  macros.rs  main.rs  manifest.rs  path.rs  result.rs  run.rs  service_option.rs  specified_target.rs  sync.rs
src/directories/: mod.rs
src/fronts/: mod.rs
src/fronts/console/: mod.rs  multi_progress.rs  print_error.rs  progress.rs
src/fronts/quiet/: mod.rs
src/isobin/: application.rs  cli.rs  config.rs  errors.rs  mod.rs
src/paths/: errors.rs  isobin_config.rs  isobin_manifest.rs  mod.rs  project.rs  projects.rs  virtual_home.rs  workspace.rs
src/providers/: installer.rs  mod.rs
src/providers/cargo/: config.rs  home.rs  installer.rs  manifest.rs  mod.rs
src/testdata/isobin_config_from_toml_str_works/: description_load.toml
src/testdata/isobin_config_from_yaml_str_works/: default_load.yaml
src/testdata/isobin_configs/: default_load.toml  empty_cargo.toml  empty_cargo.yaml
src/testdata/isobin_manifests/: default_load.toml  default_load.yaml  description_load.toml  description_load.yaml  empty_cargo.toml  empty_cargo.yaml
src/testdata/tool_config_from_str_works/: default_load.toml  description_load.toml
src/utils/: command_ext.rs  file_modified.rs  fs_ext.rs  io_ext.rs  join_future.rs  mod.rs  serde_ext.rs
(+4 files in other folders)
