[package]
name = "isobin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-trait = "0.1.73"
clap = { version = "3.2.25", features = ["derive"] }
derive-getters = "0.2.1"
derive-new = "0.5.9"
directories = "4.0.1"
is_executable = "1.0.1"
nanoid = "0.4.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.8.26"
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.5.11"

[dev-dependencies]
pretty_assertions = "1.4.0"
rstest = "0.12.0"


[[bin]]
name = "cargo-isobin"
path = "src/bin/isobin/main.rs"
